[tool.poetry]
name = "real_estate"
version = "0.5"
description = "Real estate scraper"
authors = ["dasDachs <jani.sumak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.48.0"
motor = "^2.1"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
mypy = "^0.761.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
